<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name" translatable="false">Kronk</string>
	<string name="log_in">Enter</string>
	<string name="next">Next</string>
	<string name="loading_instance">Retrieving server info…</string>
	<string name="error">Error</string>
	<string name="not_a_mastodon_instance">%s doesn’t appear to be a Mastodon server.</string>
	<string name="ok">OK</string>
	<string name="preparing_auth">Preparing for authentication…</string>
	<string name="finishing_auth">Finishing authentication…</string>
	<string name="user_boosted">%s boosted</string>
	<string name="in_reply_to">in reply to %s</string>
	<string name="notifications">Notifications</string>
	<string name="user_followed_you">%s followed you</string>
	<string name="user_sent_follow_request">%s sent you a follow request</string>
	<string name="user_favorited">%s frothed:</string>
	<string name="notification_boosted">%s boosted:</string>
	<string name="share_toot_title">Share</string>
	<string name="settings">Settings</string>
	<string name="invite">Invite</string>
	<string name="invite_share_text">Join me on Kronk: %s</string>
	<string name="publish">Publish</string>
	<string name="discard_draft">Discard draft?</string>
	<string name="discard">Discard</string>
	<string name="cancel">Cancel</string>
	<plurals name="followers">
		<item quantity="one">follower</item>
		<item quantity="other">followers</item>
	</plurals>
	<plurals name="following">
		<item quantity="one">following</item>
		<item quantity="other">following</item>
	</plurals>
	<string name="posts">Posts</string>
	<string name="posts_and_replies">Posts and replies</string>
	<string name="media">Media</string>
	<string name="profile_about">About</string>
	<string name="button_follow">Follow</string>
	<string name="button_following">Following</string>
	<string name="edit_profile">Edit profile</string>
	<string name="share_user">Share profile via…</string>
	<string name="mute_user">Mute %s</string>
	<string name="unmute_user">Unmute %s</string>
	<string name="block_user">Block %s</string>
	<string name="unblock_user">Unblock %s</string>
	<string name="report_user">Report %s</string>
	<string name="block_domain">Block %s</string>
	<string name="unblock_domain">Unblock %s</string>
	<plurals name="x_posts">
		<item quantity="one">%,d post</item>
		<item quantity="other">%,d posts</item>
	</plurals>
	<string name="profile_joined">Joined</string>
	<string name="done">Done</string>
	<string name="loading">Loading…</string>
	<string name="field_label">Label</string>
	<string name="field_content">Content</string>
	<string name="saving">Saving…</string>
	<string name="post_from_user">Post from %s</string>
	<string name="poll_option_hint">Option %d</string>
	<plurals name="x_minutes">
		<item quantity="one">%d minute</item>
		<item quantity="other">%d minutes</item>
	</plurals>
	<plurals name="x_hours">
		<item quantity="one">%d hour</item>
		<item quantity="other">%d hours</item>
	</plurals>
	<plurals name="x_days">
		<item quantity="one">%d day</item>
		<item quantity="other">%d days</item>
	</plurals>
	<plurals name="x_seconds_left">
		<item quantity="one">%d second left</item>
		<item quantity="other">%d seconds left</item>
	</plurals>
	<plurals name="x_minutes_left">
		<item quantity="one">%d minute left</item>
		<item quantity="other">%d minutes left</item>
	</plurals>
	<plurals name="x_hours_left">
		<item quantity="one">%d hour left</item>
		<item quantity="other">%d hours left</item>
	</plurals>
	<plurals name="x_days_left">
		<item quantity="one">%d day left</item>
		<item quantity="other">%d days left</item>
	</plurals>
	<plurals name="x_votes">
		<item quantity="one">%,d vote</item>
		<item quantity="other">%,d votes</item>
	</plurals>
	<string name="poll_closed">Closed</string>
	<string name="do_mute">Mute</string>
	<string name="do_block">Block</string>
	<string name="button_blocked">Blocked</string>
	<string name="action_vote">Vote</string>
	<string name="confirm">Confirm</string>
	<string name="delete">Delete</string>
	<string name="confirm_delete_title">Delete post</string>
	<string name="confirm_delete">Are you sure you want to delete this post?</string>
	<string name="deleting">Deleting…</string>
	<string name="notification_channel_audio_player">Audio playback</string>
	<string name="play">Play</string>
	<string name="pause">Pause</string>
	<string name="log_out">Log out</string>
	<string name="add_account">Add account</string>
	<string name="search_hint">Search</string>
	<string name="hashtags">Hashtags</string>
	<string name="news">News</string>
	<string name="for_you">For you</string>
	<string name="all_notifications">Everything</string>
	<string name="mentions">Mentions</string>
	<plurals name="x_people_talking">
		<item quantity="one">%d person is talking</item>
		<item quantity="other">%d people are talking</item>
	</plurals>
	<string name="report_title">Report %s</string>
	<string name="report_choose_reason">What’s wrong with this post?</string>
	<string name="report_choose_reason_account">What’s wrong with %s?</string>
	<string name="report_choose_reason_subtitle">Select the best match</string>
	<string name="report_reason_personal">I don’t like it</string>
	<string name="report_reason_personal_subtitle">It is not something you want to see</string>
	<string name="report_reason_spam">It’s spam</string>
	<string name="report_reason_spam_subtitle">Malicious links, fake engagement, or repetitive replies</string>
	<string name="report_reason_violation">It violates server rules</string>
	<string name="report_reason_violation_subtitle">You are aware that it breaks specific rules</string>
	<string name="report_reason_other">It’s something else</string>
	<string name="report_reason_other_subtitle">The issue does not fit into other categories</string>
	<string name="report_choose_rule">Which rules are being violated?</string>
	<string name="report_choose_rule_subtitle">Select all that apply</string>
	<string name="report_choose_posts">Are there any posts that back up this report?</string>
	<string name="report_choose_posts_subtitle">Select all that apply</string>
	<string name="report_comment_title">Is there anything else we should know?</string>
	<string name="report_comment_hint">Additional comments</string>
	<string name="sending_report">Sending report…</string>
	<string name="report_sent_title">Thanks for reporting, we’ll look into this.</string>
	<string name="report_sent_subtitle">While we review this, you can take action against %s:</string>
	<string name="unfollow_user">Unfollow %s</string>
	<string name="unfollow">Unfollow</string>
	<string name="mute_user_explain">You will not see their posts. They can still follow you and see your posts and will not know that they are muted.</string>
	<string name="block_user_explain">You will not see their posts. They will not be able to see your posts or follow you. They will be able to tell that they are blocked.</string>
	<string name="report_personal_title">Don’t want to see this?</string>
	<string name="report_personal_subtitle">Here are your options for controlling what you see on Kronk:</string>
	<string name="back">Back</string>
	<string name="search_communities">Server name or URL</string>
	<string name="instance_rules_title">Server rules</string>
	<string name="instance_rules_subtitle">Kronk is a place to gather and share who we are. Enter this space intentionally and be welcome.</string>
	<string name="signup_title">Create account</string>
	<string name="display_name">Name</string>
	<string name="username">Username</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm password</string>
	<string name="category_general">General</string>
	<string name="confirm_email_title">Check your inbox</string>
	<string name="confirm_email_subtitle">Tap the link we sent you to verify %s. We’ll wait right here.</string>
	<string name="approval_pending_title">Awaiting Approval</string>
	<string name="approval_pending_subtitle">Your email has been confirmed. Your account is awaiting approval by the server administrators. Once approved, the app will automatically let you in.</string>
	<string name="account_approved_title">Account Approved!</string>
	<string name="account_approved_body">Your account has been approved. Welcome to Kronk!</string>
	<string name="confirm_email_didnt_get">Didn’t get a link?</string>
	<string name="resend">Resend</string>
	<string name="open_email_app">Open email app</string>
	<string name="resent_email">Confirmation email sent</string>
	<string name="compose_hint">Type or paste what’s on your mind</string>
	<string name="content_warning">Content warning</string>
	<string name="save">Save</string>
	<string name="add_alt_text">Add alt text</string>
	<string name="visibility_public">Public</string>
	<string name="visibility_followers_only">Followers</string>
	<string name="visibility_private">Private mention</string>
	<string name="visibility_orbit">Orbit</string>
	<string name="visibility_mates">Mates</string>
	<string name="visibility_self_only">Only me</string>
	<string name="recent_searches">Recents</string>
	<string name="notification_type_follow">New followers</string>
	<string name="notification_type_favorite">Froths</string>
	<string name="notification_type_reblog">Boosts</string>
	<string name="notification_type_mention">Mentions</string>
	<string name="notification_type_poll">Polls</string>
	<string name="choose_account">Choose account</string>
	<string name="err_not_logged_in">Please log into Kronk first</string>
	<plurals name="cant_add_more_than_x_attachments">
		<item quantity="one">You can’t add more than %d media attachment</item>
		<item quantity="other">You can’t add more than %d media attachments</item>
	</plurals>
	<string name="remove">Remove</string>
    <string name="kommons_your_vote">Your vote</string>
    <string name="kommons_agree">Agree</string>
    <string name="kommons_abstain">Abstain</string>
    <string name="kommons_block">Block</string>
    <string name="kommons_votes">Votes</string>
    <string name="kommons_challenges">Challenges</string>
    <string name="nudge_thread_send">Send</string>
    <string name="nudge_thread_record">Record voice memo</string>
    <string name="nudge_play_voice">Play voice memo</string>
    <string name="nudge_recording">Recording…</string>
    <string name="nudge_compose_attach_media">Attach image or video</string>
    <string name="nudge_compose_hint">Add a message… (optional)</string>
    <string name="kommons_the_forest">The Forest</string>
    <string name="kommons_forest_intro">Proposals, decisions, and collective thinking.</string>
    <string name="kommons_hero_title">₭ommons</string>
    <string name="kommons_hero_intro">₭ommons is where we build Kronk together. Plant seeds, support what matters most, let\'s grow Kronk as we want it.</string>
    <string name="kommons_plant_seed">Plant a seed</string>
    <string name="kommons_form_title_label">Title *</string>
    <string name="kommons_form_title_hint">A short, descriptive name</string>
    <string name="kommons_form_title_hint_sub">A short, descriptive name.</string>
    <string name="kommons_form_body_label">Description *</string>
    <string name="kommons_form_body_hint">Describe the seed, the rationale, and expected impact.</string>
    <string name="kommons_form_tasks_heading">Implementation tasks</string>
    <string name="kommons_form_tasks_hint">Optional. Break the seed into work units.</string>
    <string name="kommons_form_add_task">Add task</string>
    <string name="kommons_form_task_title_hint">Task title</string>
    <string name="kommons_form_task_desc_hint">Task description (optional)</string>
    <string name="kommons_form_remove_task">Remove task</string>
    <string name="kommons_form_submit">Plant seed</string>
</resources>